- Fix: tag overlap in some installation.

--- a/less/forum/extension.less
+++ b/less/forum/extension.less
@@ -124,7 +124,7 @@ body{font-family: 'Droid Arabic Kufi', sans-serif;}
 }
 
 .IndexPage .DiscussionListItem-info > .item-tags, .UserPage .DiscussionListItem-info > .item-tags {
-    float: left;
+    float: left !important;
 }
 
 .DiscussionPage-stream {
